@startuml

class InventoryManagementApplication{
    'methods
    + main(String [] args)
    + start(Stage stage)
}

class inventoryManagementAppController{
    'attributes
    - TextField valueText
    - TextField eventTextButton
    - ListView<inventoryItem> toDoEventList
    - listObserve manageList
    - inventoryManagement items

    'methods
    + inventoryManagementAppController()

    - updateDisplay(List<inventoryItem> update) : void
    + addEvent(ActionEvent event) : void
    + guideUser(ActionEvent event) : void
    + deleteAllInventoryItems(ActionEvent event) : void
    + deleteItem(ActionEvent event) : void
    + sortValue(ActionEvent event) : void
    + sortName(ActionEvent event) : void
    + sortSerialNumber(ActionEvent event) : void
    + displayAllEvents(ActionEvent event) : void
    + editItemName(ActionEvent event) : void
    + editItemSerial(ActionEvent event) : void
    + loadList(ActionEvent event) : void
    + editItemValue(ActionEvent event) : void
    + saveListTSV(ActionEvent event) : void
    + saveListHTML(ActionEvent event) : void
    + saveListJSON(ActionEvent event) : void
    + searchSerial(ActionEvent event) : void
    + searchName(ActionEvent event) : void
}

InventoryManagementApplication --o inventoryManagementAppController

class inventoryManagement{
    'attributes
    -List<inventoryItem> itemList

    'methods
    +inventoryManagement()

    +addItem(event) : void
    +deleteItem(int) : void
    +clearList(void) : void
    +changeSerialNumber(int, String) : void
    +changeValue(int, String) : void
    +changeName(int, String) : void
    +validateValue(String) : boolean
    +getBySerial(String) : inventoryItem
    +getByName(String) : inventoryItem
    +uniqueSerial(String) : boolean
    +validateSerial(String) : boolean
    +getItem(int) : inventoryItem
    +getList(void) : List<inventoryItem>
    +sortByValue(void) : void
    +sortByName(void) : void
    +sortBySerialNumber(void) : void
    +saveListTSV(string) : void
    +saveListJSON(inventoryManagement, String) : void
    +saveListHTML(File) : void
    +loadListTSV(File) : void
    +loadListJSON(File) : void
    +loadListHTML(File) : void
}

class inventoryItem{
    'attributes
    - String nameItem
    - String serialNumber
    - String monetaryValue

    'methods
    + inventoryItem(String, String, String)

    +setMonetaryValue(String) : void
    +getMonetaryValue(void) : String
    +getNameItem(void) : String
    +setNameItem(String) : void
    +setSerialNumber(String) : void
    +getSerialNumber(void) : String
    +toString(void) : String
}

inventoryManagement --* inventoryItem

inventoryManagementAppController --o inventoryManagement

@enduml